--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -32,6 +32,11 @@ body {
     box-shadow: 0 3px 10px rgba(0,0,0,0.15);
 }
 
+#versiculo-container h3 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   #versiculo-container{
     box-shadow: 0 3px 10px rgba(216, 216, 216, 0.15);
