--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -404,7 +404,7 @@ footer p a:hover {
 
 /* Footer fixo só no index */
 #index-footer {
-  position: fixed;
+  position:relative;
   bottom: 0;
   left: 0;
   width: 100%;
