--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -405,7 +405,7 @@ footer p a:hover {
 /* Footer fixo só no index */
 #index-footer {
   position:relative;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   width: 100%;
   background-color: var(--black);
